--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-target/
-lib_managed/
-src_managed/
-project/boot/
+target
+lib_managed
+src_managed
+project/boot
 src/test/resources/foursquare.test.cfg
