--- a/project/build.properties
+++ b/project/build.properties
@@ -1,8 +1,10 @@
-#Project properties
-#Fri Dec 04 00:03:29 EST 2009
-project.organization=foursquare
+#
+#Sun Mar 28 22:38:05 EDT 2010
 project.name=foursquare
-sbt.version=0.5.6
-project.version=0.0.1
+project.organization=foursquare
 scala.version=2.7.7
+project.version=0.0.1
+sbt.version=0.7.4
+def.scala.version=2.7.7
+build.scala.versions=2.7.7 2.7.6 2.7.5 2.8.0.Beta1 2.8.0.RC1 2.8.0.RC2 2.8.0.RC3 2.8.0.RC6
 project.initialize=false
