--- a/project/build.properties
+++ b/project/build.properties
@@ -6,5 +6,5 @@ scala.version=2.7.7
 project.version=0.0.1
 sbt.version=0.7.4
 def.scala.version=2.7.7
-build.scala.versions=2.7.7 2.7.6 2.7.5 2.8.0.Beta1 2.8.0.RC1 2.8.0.RC2 2.8.0.RC3 2.8.0.RC6
+build.scala.versions=2.7.7 2.7.6 2.7.5 2.8.0.Beta1 2.8.0.RC1 2.8.0.RC2 2.8.0.RC3 2.8.0.RC6 2.8.0
 project.initialize=false
